--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -1,194 +1,125 @@
+/* ContactComponent.css */
+
+/* ===== Generelt oppsett ===== */
 .contact-main {
-  width: 100%;
+    width: 100%;
 }
 
 .basic-contact {
-  margin-left: 5%;
-  margin-right: 5%;
+    margin: 0 5%;
+    padding-bottom: 4rem;
 }
 
+/* ===== Kontakt–intro ===== */
 .contact-heading-div {
-  display: flex;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 2rem;
 }
 
-.blog-heading-div {
-  display: flex;
-}
-
-.address-heading-div {
-  display: flex;
-  margin-top: 80px;
-}
-
-.blog-heading-div > * {
-  flex: 1;
-}
-
-.contact-heading-div > * {
-  flex: 1;
-}
-
-.address-heading-div > * {
-  flex: 1;
-}
-
-.contact-heading-img-div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.blog-heading-img-div {
-  align-items: center;
-  justify-content: center;
-}
-
+/* Gjør tekst-kolonnen til et vertikalt flex-container */
 .contact-heading-text-div {
-  text-align: center;
-}
-
-.blog-heading-text-div {
-  text-align: center;
-}
-
-.address-heading-text-div {
-  text-align: center;
-}
-
-.contact-heading-img-div > * {
-  max-width: 100%;
-  height: auto;
-}
-
-.blog-heading-img-div > * {
-  max-width: 100%;
-  height: auto;
+    flex: 1 1 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Sentrer alt horisontalt */
+    text-align: center; /* Fallback for tekst */
 }
 
 .contact-heading-text {
-  font-size: 56px;
-  font-weight: 400;
-  font-family: "Google Sans Medium";
-  line-height: 1.1;
-  text-align: center;
-  margin-top: 60px;
-}
-
-.blog-heading-text {
-  font-size: 56px;
-  font-weight: 400;
-  font-family: "Google Sans Medium";
-  line-height: 1.1;
-  text-align: center;
-  margin-top: 40px;
-}
-
-.address-heading-text {
-  font-size: 30px;
-  font-family: "Google Sans Regular";
-  text-align: center;
-  margin-bottom: 10px;
+    margin: 0.5rem 0;
+    font-size: 2rem;
 }
 
 .contact-header-detail-text {
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
-  font-family: "Google Sans Medium";
+    margin: 1rem 0;
+    line-height: 1.5;
 }
 
-.blog-header-detail-text {
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
-  font-family: "Google Sans Medium";
+/* ===== Sosiale ikoner ===== */
+/* Hvis SocialMedia komponenten har class "social-media" */
+.social-media {
+    display: flex !important;
+    justify-content: center !important;
+    gap: 1rem;
+    margin: 1rem 0;
 }
 
+/* ===== Profilbilde under sosiale ikoner ===== */
+.profile-img-below-social {
+    margin: 1.5rem 0;
+}
+
+    .profile-img-below-social img {
+        width: 400px;
+        height: 400px;
+        object-fit: cover;
+        border-radius: 50%;
+        display: block;
+        margin: 0 auto;
+    }
+
+/* ===== CV-knapp ===== */
 .resume-btn-div {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
 }
 
-.blogsite-btn-div {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+/* ===== Adresse & telefon ===== */
+.address-heading-div {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin: 4rem 0;
 }
 
+/* Tekst-kolonnen samme oppsett som over */
+.address-heading-text-div {
+    flex: 1 1 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.address-heading-text {
+    margin: 0.5rem 0;
+    font-size: 1.8rem;
+}
+
+/* Google Maps-knapp */
 .address-btn-div {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-top: 0;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
 }
 
-@media (max-width: 1380px) {
-  .contact-heading-text {
-    font-size: 50px;
-    margin-top: 60px;
-  }
-
-  .blog-heading-text {
-    font-size: 50px;
-    margin-top: 40px;
-  }
+/* ===== Footer spacing ===== */
+.footer {
+    margin-top: 4rem;
 }
 
+/* ===== Responsive brytpunkter ===== */
 @media (max-width: 768px) {
-  .contact-heading-text {
-    font-size: 30px;
-    margin-top: 0px;
-  }
+    .contact-heading-div,
+    .address-heading-div {
+        flex-direction: column;
+    }
 
-  .blog-heading-text {
-    font-size: 30px;
-    margin-top: 0px;
-  }
+    .profile-img-below-social img {
+        width: 120px;
+        height: 120px;
+    }
 
-  .address-heading-text {
-    font-size: 20px;
-  }
+    .contact-heading-text {
+        font-size: 1.6rem;
+    }
 
-  .blog-heading-div {
-    flex-direction: column-reverse;
-    margin-top: 60px;
-  }
-
-  .address-heading-div {
-    flex-direction: column;
-    margin-top: 60px;
-  }
-
-  .blog-heading-text-div {
-    margin-top: 40px;
-  }
-
-  .address-heading-text-div {
-    margin-top: 40px;
-  }
-
-  .contact-heading-div {
-    flex-direction: column;
-  }
-
-  .contact-header-detail-text {
-    font-size: 16px;
-    margin-left: 0px;
-    margin-right: 0px;
-    line-height: normal;
-    text-align: center;
-  }
-
-  .blog-header-detail-text {
-    font-size: 16px;
-    margin-left: 0px;
-    margin-right: 0px;
-    line-height: normal;
-    text-align: center;
-  }
+    .address-heading-text {
+        font-size: 1.6rem;
+    }
 }
