--- a/src/components/githubRepoCard/GithubRepoCard.css
+++ b/src/components/githubRepoCard/GithubRepoCard.css
@@ -27,12 +27,9 @@
 
 /* Beskrivelse */
 .repo-description {
-    overflow:auto;
     text-align: left;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     margin-top: 0.8rem;
+    margin-bottom: 1rem;
     font-family: "Google Sans Regular";
 }
 
@@ -245,4 +242,10 @@
     .repo-creation-date {
         font-size: 14px;
     }
+}
+
+.modal-pdf-iframe {
+    width: 100%;
+    height: 80vh; 
+    border: none;
 }
